--- a/templets/index.html
+++ b/templets/index.html
@@ -429,197 +429,83 @@
   </section>
   <!-- end client section -->
 
-  <!-- contact section -->
-  <section class="contact_section layout_padding-bottom">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Get In Touch
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-md-7">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Full Name" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
-              <div class="btn_box">
-                <button>
-                  SEND
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-5">
-          <div class="img-box">
-            <img src="images/contact-img.jpg" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end contact section -->
+
 
   <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="info_top">
-        
-        <div class="info_form">
-          <form action="">
-            <input type="email" placeholder="Your email">
-            <button>
-              Subscribe
-            </button>
-          </form>
+  <!-- <div class="container my-5"> -->
+
+  <footer style="background-color: #ffede7;">
+    <div class="container p-4">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 mb-4">
+          <ul class="list-unstyled mb-0">
+            <li class="mb-1">
+              <img width="180" sizes="(max-width: 487px) 100vw, (max-width: 800px) 20vw, 180px" src="static/images/logo-removebg-preview.png">
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">where peacemaking and technology meet</a>
+            </li>
+            <li class="mb-1">
+          </ul>
         </div>
-      </div>
-      <div class="info_bottom layout_padding2">
-        <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
-            <h5>
-              Address
-            </h5>
-            <div class="info_contact">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call +01 1234567890
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope"></i>
-                <span>
-                  demo@gmail.com
-                </span>
-              </a>
-            </div>
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-            </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #7f4722;">about</h5>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-1">
+              <a href="about/mission" style="color: #4f4f4f;">mission and vision</a>
+            </li>
+            <li class="mb-1">
+              <a href="about/programs" style="color: #4f4f4f;">programs</a>
+            </li>
+            <li class="mb-1">
+              <a href="about/team" style="color: #4f4f4f;">meet the team</a>
+            </li>
+            <li>
+              <a href="jobs" style="color: #4f4f4f;">jobs</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #7f4722;">join us</h5>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">apply now</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">open days!</a>
+            </li>
+            <li class="mb-1">
+              <a href="#!" style="color: #4f4f4f;">alumni testimonials</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #7f4722;">follow us!</h5>
+          <div class='row'>
+            <div class="column">
+              <a href="https://www.facebook.com/Tech2Peace/" style="color: #4f4f4f;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf204511175f794f121ee0_Facebook.svg" width="30" alt="" class="db-social-medea"></a>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_links">
-              <h5>
-                Useful link
-              </h5>
-              <div class="info_links_menu">
-                <a class="active" href="index.html">
-                  Home
-                </a>
-                <a href="about.html">
-                  About
-                </a>
-                <a href="treatment.html">
-                  Treatment
-                </a>
-                <a href="doctor.html">
-                  Doctors
-                </a>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-                <a href="contact.html">
-                  Contact us
-                </a>
-              </div>
-            </div>
+          <div class='column'>
+              <a href="https://www.youtube.com/@tomercohen9299" style="color: #4f4f4f;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf2046921e48f728241341_Youtube.svg" width='30' alt="" class="db-social-medea"></a>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                LATEST POSTS
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post1.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post2.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
+          <div class="column">
+              <a href="https://www.instagram.com/tech2peacet2p/" style="color: #4f4f4f;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf204543daf0ba6406f467_Instagram.svg" width="30" alt="" class="db-social-medea"></a>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                News
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post3.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post4.png" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
+          <div class="column">
+              <a href="https://www.linkedin.com/company/tech2peace/" style="color: #4f4f4f;"><img src="static/images/in.png" width="30" alt="" class="db-social-medea"></a>
+          </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- end info_section -->
+    
+
+</div>
+<!-- End of .container -->
+  
 
 
-  <!-- footer section -->
-  <footer class="footer_section">
-    <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
-    </div>
-  </footer>
-  <!-- footer section -->
+  
   <!-- jQery -->  
   <script src="static/js/jquery-3.4.1.min.js"></script>  
   <!-- bootstrap js --> 
