--- a/templets/about.html
+++ b/templets/about.html
@@ -565,7 +565,7 @@
   </main><!-- End #main -->
 
    <!-- ======= Footer ======= -->
-  <footer style="background-color: #ffede7;">
+  <footer style="background-color: #8cc3ed;">
     <div class="container p-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-4">
