--- a/templets/index.html
+++ b/templets/index.html
@@ -449,7 +449,7 @@
           <div class="item">
             <div class="box">
               <div class="img-box">
-                <img src="images/team1.jpg" alt="" />
+                <img src="/home/student/Documents/GitHub/Y2-GroupA-Team1/static/images/news1.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
