--- a/templets/apply.html
+++ b/templets/apply.html
@@ -221,8 +221,9 @@
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>Upcoming Seminars</span>
-            <h3>May 7-18 Registration closed</h3>
-            <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+            <h4>May 7-18 --> Registration closed</h4>
+            <h4>July 31 - August 10 --> Registration closed</h4>
+            <h4>August 20-31 --> Registration open</h4>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
