--- a/templets/apply.html
+++ b/templets/apply.html
@@ -227,21 +227,30 @@
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
-            <span>02</span>
-            <h4>Repellat Nihil</h4>
-            <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+            <span>What does the seminar include?</span>
+            <h3> </h3>
+            <h5 style="font-weight: lighter;">Tech training in Python, Graphic Design, Web Design, AI, Video Editing, and more.</h5>
+            <h5 style="font-weight: lighter;">Training opportunities with Google, Microsoft, and others</h5>
+            <h5 style="font-weight: lighter;">Dialogue across differences</h5>
+            <h5 style="font-weight: lighter;">Field trip</h5>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
-            <span>03</span>
-            <h4> Ad ad velit qui</h4>
-            <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+            <span>What happens after the seminar?</span>
+            <h3> </h3>
+            <h5 style="font-weight: lighter;">Become a member of our alumni community</h5>
+            <h5 style="font-weight: lighter;">Hackathons</h5>
+            <h5 style="font-weight: lighter;">Regional Meetups</h5>
+            <h5 style="font-weight: lighter;">Field trip</h5>
+            <h5 style="font-weight: lighter;">Meet different High-Tech companies</h5>
+            <h5 style="font-weight: lighter;">Weekend seminars- both tech and dialogue focused</h5>
+            <h5 style="font-weight: lighter;">Day-long tours and programs</h5>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
-            <span>04</span>
-            <h4>Repellendus molestiae</h4>
-            <p>Inventore quo sint a sint rerum. Distinctio blanditiis deserunt quod soluta quod nam mider lando casa</p>
+            <span>Will the seminar help me in the job market?</span>
+            <h3> </h3>
+            <h6 style="font-weight: lighter;">Definitely. The seminar provides a springboard for the tech and entrepreneurship world.The tech courses help programmers enrich and deepen their knowledge and  give an introduction to the tech world for those who have no experience.The hackathon and the lectures give our participants opportunities to practice their entrepreneurial skills - Public speaking, ideation, strategic thinking & market research.In addition, Our alumni gain access to our rich network, which has lots of professional opportunities.</h6>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
