--- a/templets/new_index.html
+++ b/templets/new_index.html
@@ -106,15 +106,15 @@
           <li><a class="nav-link scrollto " href="#portfolio">Media</a></li>
           <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Mission</a></li>
-              <li><a href="#">Programs</a></li>
-              <li><a href="#">Workshops</a></li>
-              <li><a href="#">Partners</a></li>
-              <li><a href="#">Contact us</a></li>
+              <li><a href="/about#mission">Mission</a></li>
+              <li><a href="/about#programs">Programs</a></li>
+              <li><a href="/about#workshops">Workshops</a></li>
+              <li><a href="/about#partners">Partners</a></li>
+              <li><a href="/about#contact">Contact us</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Donate</a></li>
-          <li><a class="getstarted scrollto" href="#about">Apply</a></li>
+          <li><a class="getstarted scrollto" href="/apply">Apply</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
