--- a/templets/apply.html
+++ b/templets/apply.html
@@ -64,6 +64,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Q&A</a></li>
           <li><a class="nav-link scrollto" href="#services">Our Impact</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Media</a></li>
@@ -264,12 +265,12 @@
                 </div>
                 <div class="form-group col-md-6 mt-3 mt-md-0">
                   <label for="name">Last Name</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
+                  <input type="text" class="form-control" name="lastname" id="lastname" required>
                 </div>
               </div>
               <div class="form-group mt-3">
                 <label for="name">Email</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
+                <input type="email" class="form-control" name="email" id="email" required>
               </div>
               <div class="form-group mt-3">
                 <label for="name">Phone Number</label>
