--- a/templets/new_index.html
+++ b/templets/new_index.html
@@ -101,6 +101,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Q&A</a></li>
           <li><a class="nav-link scrollto" href="#services">Our Impact</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Media</a></li>
@@ -186,7 +187,7 @@
 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Tech2Peace provides high-tech and entrepreneurial training alongside conflict dialogue to young Palestinians and Israelis. In partnership with leading organizations like Google for Startups, Microsoft, and MIT, we use conflict dialogue and team-building activities to create a safe space for young people of all backgrounds and beliefs to meet, express their beliefs, and work with the "other side"</h3>
+            <h3>Tech2Peace provides high-tech and entrepreneurial training alongside conflict dialogue to young Palestinians and Israelis. In partnership with leading organizations like Google for Startups, Microsoft, and MIT, we use conflict dialogue and team-building activities to create a safe space for young people of all backgrounds and beliefs to meet, express their beliefs, and work with the "other side".</h3>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="/apply">Apply now!</a>
