--- a/templets/about.html
+++ b/templets/about.html
@@ -60,6 +60,7 @@
           <li><a class="nav-link scrollto " href="#portfolio">Media</a></li>
           <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              <li><a class="nav-link scrollto" href="/">Home</a></li>
               <li><a href="/about#mission">Mission</a></li>
               <li><a href="/about#programs">Programs</a></li>
               <li><a href="/about#workshops">Workshops</a></li>
