my changes for the cal

--- a/templets/new_index.html
+++ b/templets/new_index.html
@@ -289,6 +289,37 @@
     </div>
   </section>
 
+
+  <!-- ======= About Us Section ======= -->
+  <section id="about" class="about">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Events calender </h2>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6 order-1 order-lg-2">
+          <iframe src="/cal" width="100%" height="600" frameborder="0"></iframe>
+        </div>
+        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+          <h4>
+
+            Each date on the calendar is clickable
+
+          </h4>
+          <p class="fst-italic">
+           When you press on a specific date, a pop-up or tooltip appears, providing you with detailed information about any events or activities scheduled for that particular day. 
+          <p>
+            The information displayed may include the event name, time, location, and any additional notes you have added.
+          </p>
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End About Us Section -->
+
   <!-- end team section -->
     <!-- ======= Portfolio Section ======= -->
    <!--  <section id="portfolio" class="portfolio">
