--- a/templets/about.html
+++ b/templets/about.html
@@ -55,6 +55,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Q&A</a></li>
           <li><a class="nav-link scrollto" href="#services">Our Impact</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Media</a></li>
