--- a/templets/new_index.html
+++ b/templets/new_index.html
@@ -184,7 +184,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(static/assets/img/slide/slide-2.jpg)">
+        <!-- <div class="carousel-item" style="background-image: url(static/assets/img/slide/slide-2.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
@@ -192,10 +192,10 @@
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(static/assets/img/slide/slide-3.jpg)">
+        <<!-- div class="carousel-item" style="background-image: url(static/assets/img/slide/slide-3.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
@@ -203,7 +203,7 @@
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -238,7 +238,7 @@
       </div>
     </section><!-- End Cta Section -->
 
-    <section id="cal" class="cale" style="background-color:lightblue;">
+    <section id="cal" class="cale" style="background-color:#D4F1F4;">
       <div class="container">
 
         <div class="row">
@@ -247,7 +247,8 @@
             <div class="section-title">
         <h2>Events calender </h2>
       </div>
-
+<h4> </h4>
+<h3> </h3>
             <h4>
 
             Each date on the calendar is clickable
@@ -263,8 +264,8 @@
           </p>
 
           </div>
-          <div class="col-lg-5 order-1 order-lg-2">
-            <iframe src="/cal" width="100%" height="600" frameborder="0"></iframe>
+          <div class="col-lg-5 order-1 order-lg-2" style="background-color:#D4F1F4;">
+            <iframe src="/cal" width="100%" height="600" frameborder="0" style="background-color:lightblue;"></iframe>
           </div>
         </div>
       </div>
