--- a/qna/templet/qnabackup.html
+++ b/qna/templet/qnabackup.html
@@ -1,13 +1,18 @@
-<!-- templates/qna.html -->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Questions and Answers</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/question.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Questions and Answers</h1>
     
+    <form action="/post_question" method="POST">
+        <label for="question">Your question:</label>
+        <input type="text" id="question" name="question" required>
+        <input type="submit" value="Submit">
+    </form>
+
     <ul>
         {% for entry in entries %}
         <li>
@@ -16,7 +21,7 @@
             <strong>Answer:</strong> {{ entry.answer }}
             <br>
             <button class="reply-btn" data-question-id="{{ entry.UID }}">Toggle Reply</button>
-            <form action="{{ url_for('reply') }}" method="post" class="reply-form" style="display: none;">
+            <form action="/reply" method="post" class="reply-form" style="display: none;">
                 <label for="reply">Your Reply:</label>
                 <textarea id="reply" name="reply" rows="4" required></textarea>
                 <input type="hidden" value="{{ entry.UID }}" name="question_id">
