--- a/templets/new_index.html
+++ b/templets/new_index.html
@@ -143,7 +143,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="/home">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">Q&A</a></li>
+          <li><a class="nav-link scrollto" href="/postq">Q&A</a></li>
           <li><a class="nav-link scrollto" href="#services">Our Impact</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Media</a></li>
           <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
