--- a/templets/apply.html
+++ b/templets/apply.html
@@ -293,7 +293,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer style="background-color: #ffede7;">
+  <footer style="background-color: #D4F1F4;">
     <div class="container p-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-4">
@@ -302,56 +302,56 @@
               <img width="180" sizes="(max-width: 487px) 100vw, (max-width: 800px) 20vw, 180px" src="static/images/logo-removebg-preview.png">
             </li>
             <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">where peacemaking and technology meet</a>
+              <a href="#!" style="color: #064b80;">where peacemaking and technology meet</a>
             </li>
             <li class="mb-1">
           </ul>
         </div>
         <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3" style="letter-spacing: 2px; color: #7f4722;">about</h5>
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #064b80;">about</h5>
           <ul class="list-unstyled mb-0">
             <li class="mb-1">
-              <a href="about/mission" style="color: #4f4f4f;">mission and vision</a>
+              <a href="about/mission" style="color: #064b80;">mission and vision</a>
             </li>
             <li class="mb-1">
-              <a href="about/programs" style="color: #4f4f4f;">programs</a>
+              <a href="about/programs" style="color: #064b80;">programs</a>
             </li>
             <li class="mb-1">
-              <a href="about/team" style="color: #4f4f4f;">meet the team</a>
+              <a href="about/team" style="color: #064b80;">meet the team</a>
             </li>
             <li>
-              <a href="jobs" style="color: #4f4f4f;">jobs</a>
+              <a href="jobs" style="color: #064b80;">jobs</a>
             </li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3" style="letter-spacing: 2px; color: #7f4722;">join us</h5>
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #064b80;">join us</h5>
           <ul class="list-unstyled mb-0">
             <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">apply now</a>
+              <a href="#!" style="color: #064b80;">apply now</a>
             </li>
             <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">open days!</a>
+              <a href="#!" style="color: #064b80;">open days!</a>
             </li>
             <li class="mb-1">
-              <a href="#!" style="color: #4f4f4f;">alumni testimonials</a>
+              <a href="#!" style="color: #064b80;">alumni testimonials</a>
             </li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-6 mb-4">
-          <h5 class="mb-3" style="letter-spacing: 2px; color: #7f4722;">follow us!</h5>
+          <h5 class="mb-3" style="letter-spacing: 2px; color: #064b80;">follow us!</h5>
           <div class='row'>
             <div class="column">
-              <a href="https://www.facebook.com/Tech2Peace/" style="color: #4f4f4f;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf204511175f794f121ee0_Facebook.svg" width="30" alt="" class="db-social-medea"></a>
+              <a href="https://www.facebook.com/Tech2Peace/" style="color: #064b80;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf204511175f794f121ee0_Facebook.svg" width="30" alt="" class="db-social-medea"></a>
           </div>
           <div class='column'>
-              <a href="https://www.youtube.com/@tomercohen9299" style="color: #4f4f4f;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf2046921e48f728241341_Youtube.svg" width='30' alt="" class="db-social-medea"></a>
+              <a href="https://www.youtube.com/@tomercohen9299" style="color: #064b80;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf2046921e48f728241341_Youtube.svg" width='30' alt="" class="db-social-medea"></a>
           </div>
           <div class="column">
-              <a href="https://www.instagram.com/tech2peacet2p/" style="color: #4f4f4f;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf204543daf0ba6406f467_Instagram.svg" width="30" alt="" class="db-social-medea"></a>
+              <a href="https://www.instagram.com/tech2peacet2p/" style="color: #064b80;"><img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5ebf204543daf0ba6406f467_Instagram.svg" width="30" alt="" class="db-social-medea"></a>
           </div>
           <div class="column">
-              <a href="https://www.linkedin.com/company/tech2peace/" style="color: #4f4f4f;"><img src="static/images/in.png" width="30" alt="" class="db-social-medea"></a>
+              <a href="https://www.linkedin.com/company/tech2peace/" style="color: #064b80;"><img src="static/images/in.png" width="30" alt="" class="db-social-medea"></a>
           </div>
           </div>
         </div>
