--- a/templets/new_index.html
+++ b/templets/new_index.html
@@ -142,7 +142,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="/home">Home</a></li>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="/postq">Q&A</a></li>
           <li><a class="nav-link scrollto" href="#services">Our Impact</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Media</a></li>
@@ -352,7 +352,7 @@
   
 
   <!-- ======= Footer ======= -->
-  <footer style="background-color:lightblue;">
+  <footer style="background-color:#D4F1F4;">
     <div class="container p-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-4">
