--- a/templets/Q&A.html
+++ b/templets/Q&A.html
@@ -34,7 +34,7 @@
     </form>
 
     <!-- Add a button to go back home (replace "home_url" with the actual URL for your homepage) -->
-    <a href="{{ home_url }}"><button>Go Back Home</button></a>
+    <a href="/"><button>Go Back Home</button></a>
 
     <script>
         const replyButtons = document.querySelectorAll('.reply-btn');
