--- a/templets/new_index.html
+++ b/templets/new_index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
+
     
     <link rel="stylesheet" href="static/carrousel_static/css/owl.carousel.min.css">
     <link rel="stylesheet" href="static/carrousel_static/css/owl.theme.default.min.css">
@@ -105,6 +107,14 @@
   <!-- Template Main CSS File -->
   <link href="static/assets/css/style.css" rel="stylesheet">
 
+  <style>
+    .backcontainer {
+      color: white;
+      font-size: 24px;
+      font-family: 'Dancing Script' !important;
+    }
+  </style>
+
   <!-- =======================================================
   * Template Name: Green
   * Updated: Jul 27 2023 with Bootstrap v5.3.1
@@ -173,11 +183,11 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(static/assets/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image: url(static/assets/img/slide/front.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Tech2Peace<span></span></h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <p class="animate__animated animate__fadeInUp"></p>
               <a href="/about" class="btn-get-started animate__animated animate__fadeInUp scrollto">About us</a>
             </div>
           </div>
